Refactor configuration files: remove unused parameters and update camera calibration values

--- a/config/config2.yaml
+++ b/config/config2.yaml
@@ -26,19 +26,19 @@
     # ==================== 카메라 캘리브레이션 ====================
     # Camera matrix (3x3) - row-major: [fx, s, cx, 0, fy, cy, 0, 0, 1]
     camera_matrix: [
-      1385.635672, -0.895992, 947.154907,
-      0.0, 1388.287107, 607.421636,
+      2.3531675448071378e+03, 0., 1.0273207575316267e+03,
+      0.0, 2.3586343982493358e+03, 7.6010058320781366e+02,
       0.0, 0.0, 1.0
     ]
     
     # Distortion coefficients [k1, k2, p1, p2, k3]
-    dist_coeffs: [-0.085307, 0.079377, 0.000436, -0.000662, 0.0]
+    dist_coeffs: [-1.1939616059985084e-01, 4.0157218609309486e-01,  1.0824710229080765e-03, -2.3984687380279165e-03, 0.0]
     
     # LiDAR to Camera transformation (4x4) - row-major
     t_lidar_to_cam: [
-      0.0129229, -0.999916, -0.000756324, -0.121755,
-      -0.0144186, 0.000569792, -0.999896, 0.010138,
-      0.999813, 0.0129326, -0.0144102, -0.148907,
+      -0.00408173,-0.99999142,0.00068080,0.00277220,
+      -0.00543332,-0.00065851,-0.99998498,-0.02387732,
+      0.99997687,-0.00408530,-0.00543058,0.01808032,
       0.0, 0.0, 0.0, 1.0
     ]
     
@@ -52,8 +52,6 @@
     obj2_labels: [1, 1, 0, 0, 0, 0, 0]
     
     # ==================== 측정 설정 ====================
-    confidence_threshold: 0.8
-    processing_timeout: 30.0
     use_lidar: true
     use_camera: true
     output_dir: '/home/antlab/sam2_results'
