--- a/config/config.yaml
+++ b/config/config.yaml
@@ -64,21 +64,23 @@
     ftp_username: 'plateftp'
     ftp_password: 'plateftp'
     ftp_remote_dir: 'upload/4'
-    
+
     # ==================== main.py 통합 파라미터 ====================
     one_shot_image: '/home/antlab/ROS2/crane_ws/src/hyundai_crane_automation/oneshot'
-    morph_kernel_size: 40
+    morph_plate_kernel_size: 40
+    morph_magnet_kernel_size: 50
     measurement_offset_px: 700
-    measurement_offset_p1_p2: 19.4
-    measurement_offset_p3_p4: 19.4
-    measurement_offset_p5_p6: 32.4
-    measurement_offset_p7_p8: 32.4
-    lidar_dense: false
+    measurement_offset_p1_p2: 50.
+    measurement_offset_p3_p4: 46.
+    measurement_offset_p5_p6: 27.
+    measurement_offset_p7_p8: 20.
     enable_fov_crop: true
     fov_degrees: 120
-    enable_plane_refinement: true
-    plane_ransac_iterations: 100
-    plane_threshold: 0.05
+    lidar_vertical: 128
+    lidar_horizontal: 512
+    lidar_upsample_scale: 3
+    plane_ransac_iterations: 700
+    plane_threshold: 0.003
     
     # ==================== 센서 토픽 ====================
     camera_topic: '/flir_camera/image_colored/compressed'
