--- a/config/config2.yaml
+++ b/config/config2.yaml
@@ -19,9 +19,9 @@
 /inference_node:
   ros__parameters:
     # ==================== SAM2 설정 ====================
-    sam2_root: '/home/antlab/ROS2/ros2_ws/src/hyundai_crane_automation/src/sam2'
+    sam2_root: '/home/antlab/ROS2/ros2_ws/src/hyundai-steel-crane-automation-system/src/sam2'
     sam2_config: 'configs/sam2.1/sam2.1_hiera_l.yaml'
-    sam2_checkpoint: '/home/antlab/ROS2/ros2_ws/src/hyundai_crane_automation/src/sam2/sam2.1_hiera_large.pt'
+    sam2_checkpoint: '/home/antlab/ROS2/ros2_ws/src/hyundai-steel-crane-automation-system/src/sam2/sam2.1_hiera_large.pt'
     
     # ==================== 카메라 캘리브레이션 ====================
     # Camera matrix (3x3) - row-major: [fx, s, cx, 0, fy, cy, 0, 0, 1]
@@ -66,19 +66,21 @@
     ftp_remote_dir: 'upload/3'
     
     # ==================== main.py 통합 파라미터 ====================
-    one_shot_image: '/home/antlab/ROS2/crane_ws/src/hyundai_crane_automation/oneshot'
-    morph_kernel_size: 40
+    one_shot_image: '/home/antlab/ROS2/crane_ws/src/hyundai-steel-crane-automation-system/oneshot'
+    morph_plate_kernel_size: 40
+    morph_magnet_kernel_size: 50
     measurement_offset_px: 700
-    measurement_offset_p1_p2: 19.4
-    measurement_offset_p3_p4: 19.4
-    measurement_offset_p5_p6: 32.4
-    measurement_offset_p7_p8: 32.4
-    lidar_dense: false
+    measurement_offset_p1_p2: 50.
+    measurement_offset_p3_p4: 46.
+    measurement_offset_p5_p6: 27.
+    measurement_offset_p7_p8: 20.
     enable_fov_crop: true
     fov_degrees: 120
-    enable_plane_refinement: true
-    plane_ransac_iterations: 100
-    plane_threshold: 0.05
+    lidar_vertical: 128
+    lidar_horizontal: 2048
+    lidar_upsample_scale: 3
+    plane_ransac_iterations: 700
+    plane_threshold: 0.003
     
     # ==================== 센서 토픽 ====================
     camera_topic: '/camera/image_raw/compressed'
